--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_URL = ://624dce395https3326d0cfe52ffac.mockapi.io/api/v1
+REACT_APP_BASE_URL = https://624dce3953326d0cfe52ffac.mockapi.io/api/v1
